add meta property in swagger ResponseModel + add InsufficientPermissionsResponseModel #28
