# app/controller/usercontroller/deletebyadmin.go
@@ -18,7 +18,7 @@ import (
 // @Param ids body auth.UserDeleteDto true "Ids des utilisateurs à supprimer"
 // @Success 200 {object} doc.ResponseModel "X utilisateurs supprimés"
 // @Failure 401 {object} doc.ResponseModel "Token invalide"
-// @Failure 403 {object} doc.ResponseModel "Insufficient permissions"
+// @Failure 403 {object} doc.InsufficientPermissionsResponseModel "Insufficient permissions"
 // @Failure 500 {object} doc.ResponseModel "Erreur interne"
 // @Router /user/users [post]
 func (u *userController) DeleteByAdmin(c *gin.Context) {
