# doc/swaggermodel.go
@@ -1,7 +1,19 @@
 package doc
 
+type Meta struct {
+	Method    string `json:"method"`
+	Path      string `json:"path"`
+	Status    int    `json:"status"`
+	Timestamp string `json:"timestamp"`
+}
+
 type ResponseModel struct {
-	Data string `json:"data"`
-	Error    string `json:"error"`
-	Message  string `json:"message"`
+	Data    any `json:"data"`
+	Error   any `json:"error"`
+	Message string      `json:"message"`
+	Meta    Meta        `json:"meta"`
+}
+
+type InsufficientPermissionsResponseModel struct {
+	Error   string `json:"error"`
 }
